# DNDDice

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml  rust_lin.yml  rust_win.yml
assets/: dnddice.bat
src/: arithmetic.rs  commands.rs  dices.rs  errors.rs  help.rs  init.rs  interactive.rs  log.rs  main.rs  method.rs  method_comments.rs  method_descs.rs  method_descs_long.rs  methods.rs  output.rs  processes.rs  render.rs  statistics.rs  statlists.rs  strings.rs  tests.rs
test/: test_logs.txt  tests.txt
