[package]
name = "dnddice"
version = "0.1.0"
authors = ["Anton A Truttse <aatruttse@mephi.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.8.0"
lazy_static = "1.4.0"
rand = "0.8.3"
structopt = "0.3"
