[package]
name = "dnddice"
version = "0.2.2"
authors = ["Anton A. Truttse (Dargot) <dargot@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.8.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
rand = "0.8.3"
regex = "1.4.0"
structopt = "0.3"
